@@ -58,6 +58,9 @@
 * Fixed a crash in Unicode, Dammit's encoding detector when the name
   of the encoding itself contained invalid bytes. [bug=1360913]
 
+* Improved the exception raised when you call .unwrap() or
+  .replace_with() on an element that's not attached to a tree.
+
 = 4.3.2 (20131002) =
 
 * Fixed a bug in which short Unicode input was improperly encoded to
